Create index.html for site redirection
Added HTML structure for redirecting to a new site.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url='https://sites.google.com/view/woreom/about'" />
+    <style>
+      body { font-family: sans-serif; text-align: center; padding-top: 50px; }
+    </style>
+  </head>
+  <body>
+    <p>If you are not redirected automatically, follow this link:</p>
+    <p><a href="https://sites.google.com/view/your-site-name">Go to my site</a></p>
+  </body>
+</html>
