Update link to redirect to new site

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <p>If you are not redirected automatically, follow this link:</p>
-    <p><a href="https://sites.google.com/view/your-site-name">Go to my site</a></p>
+    <p><a href="https://sites.google.com/view/woreom/about">Go to my site</a></p>
   </body>
 </html>
