--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url='https://sites.google.com/view/woreom/about'" />
+    <meta http-equiv="refresh" content="0; url='https://woreom.com'" />
     <style>
       body { font-family: sans-serif; text-align: center; padding-top: 50px; }
     </style>
