--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url='https://woreom.com'" />
+    <meta http-equiv="refresh" content="0; url='https://www.woreom.com'" />
     <style>
       body { font-family: sans-serif; text-align: center; padding-top: 50px; }
     </style>
   </head>
   <body>
     <p>If you are not redirected automatically, follow this link:</p>
-    <p><a href="https://sites.google.com/view/woreom/about">Go to my site</a></p>
+    <p><a href="https://www.woreom.com">Go to my site</a></p>
   </body>
 </html>
